--- a/_quarto.yml
+++ b/_quarto.yml
@@ -2,18 +2,27 @@ project:
   type: website
 
 website:
-  title: "ShalvaKvi"
+  title: "Shalva Kvitelashvili"
+  open-graph: true
   navbar:
     left:
       - href: index.qmd
         text: Home
       - about.qmd
-
+  search: true
+    
+      
 format:
   html:
-    theme: cosmo
-    css: styles.css
     toc: true
+    theme: 
+      - cosmo
+      - styles.scss
 
-editor: visual
+
+
+execute:
+  freeze: true
+  keep-md: false
+
 
